@@ -21,17 +21,15 @@ import com.winterhavenmc.homestar.PluginMain;
 import com.winterhavenmc.homestar.messages.Macro;
 import com.winterhavenmc.homestar.messages.MessageId;
 import com.winterhavenmc.homestar.sounds.SoundId;
+
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
-import org.bukkit.entity.HumanEntity;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 
 final class GiveSubcommand extends AbstractSubcommand
@@ -60,29 +58,12 @@ final class GiveSubcommand extends AbstractSubcommand
 	public List<String> onTabComplete(final CommandSender sender, final Command command,
 	                                  final String alias, final String[] args)
 	{
-
-		List<String> returnList = new ArrayList<>();
-
-		// return list of matching players
-		if (args.length == 2)
+		return switch (args.length)
 		{
-			return plugin.getServer().getOnlinePlayers().stream()
-					.map(HumanEntity::getName)
-					.filter(playerName -> matchPrefix(playerName, args[1]))
-					.collect(Collectors.toList());
-		}
-
-		// return some useful quantities
-		else if (args.length == 3)
-		{
-			returnList.add("1");
-			returnList.add("2");
-			returnList.add("3");
-			returnList.add("5");
-			returnList.add("10");
-		}
-
-		return returnList;
+			case 2 -> null; // return null for list of matching online players
+			case 3 -> List.of("1", "2", "3", "5", "10"); // return some useful quantities
+			default -> List.of(); // return empty list
+		};
 	}
 
 
@@ -92,7 +73,7 @@ final class GiveSubcommand extends AbstractSubcommand
 		// if command sender does not have permission to give HomeStars, output error message and return true
 		if (!sender.hasPermission(permissionNode))
 		{
-			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_GIVE).send();
+			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_GIVE_PERMISSION).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
 		}
@@ -116,7 +97,7 @@ final class GiveSubcommand extends AbstractSubcommand
 		}
 
 		// get passed player name
-		String targetPlayerName = args.get(0);
+		String targetPlayerName = args.getFirst();
 
 		// try to match target player name to currently online player
 		Player targetPlayer = plugin.getServer().getPlayer(targetPlayerName);
@@ -136,9 +117,10 @@ final class GiveSubcommand extends AbstractSubcommand
 			try
 			{
 				quantity = Integer.parseInt(args.get(1));
-			} catch (NumberFormatException e)
+			}
+			catch (NumberFormatException exception)
 			{
-				plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_QUANTITY_INVALID).send();
+				plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_GIVE_QUANTITY_INVALID).send();
 				plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 				return true;
 			}
@@ -154,7 +136,9 @@ final class GiveSubcommand extends AbstractSubcommand
 		quantity = Math.min(maxQuantity, quantity);
 
 		// add specified quantity of homestar(s) to player inventory
-		HashMap<Integer, ItemStack> noFit = targetPlayer.getInventory().addItem(plugin.homeStarUtility.create(quantity));
+		ItemStack item = plugin.homeStarUtility.create(quantity);
+
+		HashMap<Integer, ItemStack> noFit = targetPlayer.getInventory().addItem(item);
 
 		// count items that didn't fit in inventory
 		int noFitCount = 0;
@@ -174,13 +158,22 @@ final class GiveSubcommand extends AbstractSubcommand
 		// subtract noFitCount from quantity
 		quantity = quantity - noFitCount;
 
-		// don't display messages if giving item to self
-		if (!sender.getName().equals(targetPlayer.getName()))
+
+		if (sender.getName().equals(targetPlayer.getName()))
+		{
+			// send message when giving to self
+			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_GIVE_SELF)
+					.setMacro(Macro.QUANTITY, quantity)
+					.setMacro(Macro.ITEM, item)
+					.send();
+		}
+		else
 		{
 			// send message and play sound to giver
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_GIVE)
-					.setMacro(Macro.ITEM_QUANTITY, quantity)
-					.setMacro(Macro.TARGET_PLAYER, targetPlayer)
+					.setMacro(Macro.PLAYER, targetPlayer)
+					.setMacro(Macro.QUANTITY, quantity)
+					.setMacro(Macro.ITEM, item)
 					.send();
 
 			// if giver is in game, play sound
@@ -191,15 +184,9 @@ final class GiveSubcommand extends AbstractSubcommand
 
 			// send message to target player
 			plugin.messageBuilder.compose(targetPlayer, MessageId.COMMAND_SUCCESS_GIVE_TARGET)
-					.setMacro(Macro.ITEM_QUANTITY, quantity)
-					.setMacro(Macro.TARGET_PLAYER, sender)
-					.send();
-		}
-		else
-		{
-			// send message when giving to self
-			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_GIVE_SELF)
-					.setMacro(Macro.ITEM_QUANTITY, quantity)
+					.setMacro(Macro.PLAYER, sender)
+					.setMacro(Macro.QUANTITY, quantity)
+					.setMacro(Macro.ITEM, item)
 					.send();
 		}
 
